structmeta-tests/tests/compile_fail/struct_meta/option_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
 --> $DIR/option_flag.rs:5:5
  |
5 |     flag: Option<Flag>,
  |     ^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
